# templify

./: .gitignore  Cargo.toml  README.md  templify.code-workspace
examples/: inject.rs  manual_sections.rs  recursive.rs  simple.rs  struct.rs
examples/cli_test/: data.json  templates.yaml
examples/cli_test/templates/: {{ service.name }}_config.txt.j2
examples/targets/inject/inc/: example.hpp
examples/targets/inject/src/: example.cpp
examples/targets/manual_sections/inc/: example.hpp
examples/targets/manual_sections/src/: example.cpp
examples/templates/inject/inc/: example.hpp.inj
examples/templates/inject/src/: example.cpp.inj
examples/templates/manual_sections/inc/: example.hpp.j2
examples/templates/manual_sections/src/: example.cpp.j2
examples/templates/recursive/: README.md.j2
examples/templates/recursive/inc/: sample.hpp
examples/templates/recursive/src/: main.cpp.j2
examples/templates/recursive/{{ dict_data.project_name }}_doc/: Notes.from.{{ dict_data.author }}.md.j2
examples/templates/simple/: template.j2
examples/templates/struct/: template.j2
src/: config.rs  engine.rs  filters.rs  formatting.rs  generator.rs  iteration.rs  lib.rs  main.rs  manual_sections.rs
