[package]
name = "templify"
version = "0.1.0"
edition = "2021"
description = "File generation helper using a data dictionary and Jinja2 template files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/robinbreast/templify"
keywords = ["jinja", "jinja2", "j2", "template", "generator"]
categories = ["template-engine"]

[dependencies]
minijinja = "=2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"
log = "0.4"

[dev-dependencies]
tempfile = "3.2"
env_logger = "0.11"
fs_extra = "1"